<resources>
    <string name="app_name">LzyCrazy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="about_company_description">LzyCrazy is an Indian Multi-National Technology company based in Noida, India. It was incorporated on 18th June 2021 in Noida, Uttar Pradesh. We aim at providing all the luxury brands under a single platform. We are developing our brand as a protagonist and also aim at reaching consumer satisfaction by providing outstanding services. We have the best social media platform to connect people all over the world, which is a great benefit for advertisement as well as brand promotion. We help in business development by focusing on consumers needs and ensuring them a great variety of products in a truly unique way. With our new features, users can share new photos, videos, etc.</string>
    <string name="lzycrazy_team_description">LzyCrazy is a team comprised of dedicated and experienced professionals with relevant experience in their respective fields. We ensure the delivery of our best and most efficient services to consumers that can make their lives more effortless, gracious, and elated. LzyCrazy believes in providing the best platform for people to connect, sell their products, share ideas, promote business, develop websites, and so on. We also tend to provide a source of income to people for their better lifestyle. Our motive is to emerge as one of the best leading brands in the global world. Keeping up with the latest technology, we endeavor to keep our consumers at the center of our business universe. Infused with our creativity, LzyCrazy’s distinct aim is to provide the world a better future.</string>
    <string name="lzycracy_vision">The vision is to emerge as the largest networking site in the global world by empowering people with convenient access and the greatest platform to connect them extensively.</string>
    <string name="lzycrazy_values">LzyCrazy has acquired 29 members from each state of India to provide efficient services to people.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
=======
    <string name="marketplace_description">Welcome to our Properties section – your one-stop destination for finding the perfect place to live, invest, or grow your business. Whether you’re searching for a cozy 1BHK apartment, a spacious villa, a commercial office space, or a prime land plot, we offer a wide range of verified listings to suit every budget and lifestyle. Our platform is designed to make your property search smooth, secure, and hassle-free. From affordable housing options to luxury residences, we cover all categories, including fully furnished, semi-furnished, and unfurnished properties. You can filter your search based on location, price, size, amenities, and property type to find exactly what you’re looking for. We cater to both buyers and renters, offering up-to-date listings with high-quality images, accurate floor plans, and detailed information about each property. Whether you\'re a student, working professional, family, or investor — we ensure you get transparent deals with no hidden charges. Why wait? Explore properties in developing areas and hot locations that offer great future returns. Our property advisors and partners work closely to ensure that every listing is legal, verified, and ready for immediate possession or lease.</string>
    <string name="select_brand">Select Brand</string>
    <string name="add_photo_icon">Add Photo icon</string>
    <string name="lzycrazy">LzyCrazy</string>
    <string name="new_chat">New Chat</string>
    <string name="you_can_create_new_group">You can create New Group</string>
    <string name="search_or_start_new_chat">Search or start new chat</string>


>>>>>>> 3818ee7e7ac955f3076add2364d7e5ed85f9236b
</resources>